Specimen delete, blob overwrite
